Exception messages formatting fix